# honto-capture

./: .gitignore  README.md  capture.py  main.py  pyproject.toml
.github/workflows/: test.yml
tests/: test_capture.py
