[project]
name = "honto-capture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pillow>=12.1.1",
    "pyobjc-framework-applicationservices>=12.1",
    "pyobjc-framework-quartz>=12.1",
    "pyobjc-framework-vision>=12.1",
]
